Fix links in the toolbar.

--- a/visualizer/travelling-salesman-problem-visualizer.html
+++ b/visualizer/travelling-salesman-problem-visualizer.html
@@ -1,4 +1,5 @@
 <link rel="import" href="bower_components/core-scroll-header-panel/core-scroll-header-panel.html">
+<link rel="import" href="bower_components/core-icons/core-icons.html">
 <link rel="import" href="bower_components/core-icons/iconsets/maps-icons.html">
 <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="bower_components/paper-fab/paper-fab.html">
@@ -56,10 +57,10 @@
       }
     </style>
     <core-scroll-header-panel keepCondensedHeader>
-      <core-toolbar id="title" class="medium-tall">
-        <span class="indent title flex">Google 2014 STEP Class 5 & 6 - Travelling Salesman Problem Challenges</span>
-        <a href=".."><paper-icon-button icon="drive-form"></paper-icon-button></a>
-        <a href=".."><paper-icon-button icon="help"></paper-icon-button></a>
+      <core-toolbar class="medium-tall">
+        <span flex class="indent">Google 2014 STEP Class 5 & 6 - Travelling Salesman Problem Challenges</span>
+        <a href="//bit.ly/google-2014-step-tsp"><paper-icon-button icon="help"></paper-icon-button></a>
+        <a href="//bit.ly/google-2014-step-tsp-leaderboard"><paper-icon-button icon="drive-form"></paper-icon-button></a>
         <div class="bottom fit" horizontal center-justified end layout>
           <paper-tabs id="challenges" selected="0">
             <paper-tab>Challenge 0</paper-tab>
