Convert the document to markdown as README.md

--- a/visualizer/travelling-salesman-problem-visualizer.html
+++ b/visualizer/travelling-salesman-problem-visualizer.html
@@ -74,8 +74,8 @@
       </div>
       <div>
         <h4>Links</h4>
-        <div><a href="//bit.ly/2015-step-tsp">Guide</a></div>
-        <div><a href="//bit.ly/2015-step-tsp-leaderboard">Leaderboard</a></div>
+        <div><a href="https://github.com/hayatoito/google-2015-step-tsp">README</a></div>
+        <div><a href="https://docs.google.com/spreadsheets/d/1knGHexwjlFJkRhhpuVtBjQAiI7TaTapysBPMPe0KO3A/edit?usp=sharing">Scoreboard</a></div>
       </div>
     </div>
     <travelling-salesman-problem id="tsp" pathlength="{{result}}"></travelling-salesman-problem>
