--- a/visualizer/travelling-salesman-problem-visualizer.html
+++ b/visualizer/travelling-salesman-problem-visualizer.html
@@ -65,8 +65,8 @@
       </div>
       <div>
         <h4>Solutions</h4>
-        <paper-radio-group id="solvers" selected="yours">
-          <paper-radio-button name="yours">yours</paper-radio-button>
+        <paper-radio-group id="solvers" selected="circle">
+          <paper-radio-button name="circle">circle</paper-radio-button>
           <paper-radio-button name="random">hayato-random</paper-radio-button>
           <paper-radio-button name="greedy">hayato-greedy</paper-radio-button>
           <paper-radio-button name="sa">hayato-sa</paper-radio-button>
